<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="?attr/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".signIn.SignInActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="104dp"
            android:layout_height="136dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logo"
            android:tint="?attr/colorPrimary"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingBottom="10dp"
            android:text="@string/activity_label"
            android:textColor="?attr/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
             />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_in_user_text_label"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/account_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="?attr/colorAccent"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/sign_in_password_text_label"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_container"
                android:layout_width="213dp"
                android:layout_height="44dp"
                android:layout_marginLeft="10dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="?attr/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/account_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorAccent" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/password_forget_text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_forget_text_label"
            android:textAlignment="viewEnd"
            android:textColor="?attr/colorPrimary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/sign_in_button_text_label"
            android:textColor="?attr/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="120dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/not_sign_up_text_view"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/sign_up_button_text_label"
                android:textColor="?attr/colorPrimaryDark" />

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/ask_date_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/ask_date_button_text_label"
                android:textColor="?attr/colorPrimaryDark" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>