...

    <!-- SignIn View -->
    <string name="sign_in_user_text_label">Usuario:</string>
    <string name="sign_in_password_text_label">Password:</string>
    <string name="activity_label">Iniciar Sesión</string>
    <string name="password_forget_text_label">¿Has olvidado la contraseña?</string>
    <string name="sign_in_button_text_label">Entrar</string>
    <string name="not_sign_up_text_view">¿No eres usuario?</string>
    <string name="sign_up_button_text_label">Regístrate</string>
    <string name="ask_date_button_text_label">Pedir Cita</string>

    <!-- SignUp View -->
    <string name="user_sign_up_name_text_label">Nombre:</string>
    <string name="user_sign_up_dni_text_label">DNI:</string>
    <string name="user_sign_up_email_text_label">Email:</string>
    <string name="user_sign_up_password_text_label">Password:</string>
...
