<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".userButtonsMenuList.UserButtonsMenuListActivity">

    <!-- Sign Out -->
    <item
        android:id="@+id/action_sign_out"
        android:icon="@drawable/ic_sign_out"
        android:title="Sign Out"
        app:showAsAction="always" />

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="Ajustes"
        app:showAsAction="never" />

    <!-- Change Theme -->
    <item android:id="@+id/action_change_theme"
        android:title="Cambiar tema"
        app:showAsAction="never" />

</menu>